...
    private var swipeDirectionList = [SwipeViewKeyNum]()
    var firstStroke: SwipeViewKeyNum?
    
    private var path = UIBezierPath()
    private var previousPoint: CGPoint = CGPoint.zero
    
    private let keyboardContainerView: UIView?
    private let keyboardLabels: [UILabel]
    
    private let isTwoStrokes: Bool
    private let useTwoStrokesLogic: Bool

    var delegate: SwipeViewDelegate?
...
